ParFlatwhite.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.3).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParFlatwhite
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified AbsFlatwhite
import LexFlatwhite

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'       { PT _ (TS _ 1)  }
  '!='      { PT _ (TS _ 2)  }
  '%'       { PT _ (TS _ 3)  }
  '&&'      { PT _ (TS _ 4)  }
  '('       { PT _ (TS _ 5)  }
  ')'       { PT _ (TS _ 6)  }
  '*'       { PT _ (TS _ 7)  }
  '+'       { PT _ (TS _ 8)  }
  ','       { PT _ (TS _ 9)  }
  '-'       { PT _ (TS _ 10) }
  '/'       { PT _ (TS _ 11) }
  ';'       { PT _ (TS _ 12) }
  '<'       { PT _ (TS _ 13) }
  '<='      { PT _ (TS _ 14) }
  '='       { PT _ (TS _ 15) }
  '=='      { PT _ (TS _ 16) }
  '>'       { PT _ (TS _ 17) }
  '>='      { PT _ (TS _ 18) }
  'boolean' { PT _ (TS _ 19) }
  'const'   { PT _ (TS _ 20) }
  'else'    { PT _ (TS _ 21) }
  'false'   { PT _ (TS _ 22) }
  'for'     { PT _ (TS _ 23) }
  'if'      { PT _ (TS _ 24) }
  'int'     { PT _ (TS _ 25) }
  'return'  { PT _ (TS _ 26) }
  'string'  { PT _ (TS _ 27) }
  'to'      { PT _ (TS _ 28) }
  'true'    { PT _ (TS _ 29) }
  'void'    { PT _ (TS _ 30) }
  'while'   { PT _ (TS _ 31) }
  '{'       { PT _ (TS _ 32) }
  '||'      { PT _ (TS _ 33) }
  '}'       { PT _ (TS _ 34) }
  L_Ident   { PT _ (TV _)    }
  L_integ   { PT _ (TI _)    }
  L_quoted  { PT _ (TL _)    }

%%

Ident :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Ident) }
Ident  : L_Ident { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Ident (tokenText $1)) }

Integer :: { (AbsFlatwhite.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (AbsFlatwhite.BNFC'Position, String) }
String   : L_quoted { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Program) }
Program
  : ListTopDef { (fst $1, AbsFlatwhite.Program (fst $1) (snd $1)) }

TopDef :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.TopDef) }
TopDef
  : Type Ident '(' ListArg ')' Block { (fst $1, AbsFlatwhite.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

ListTopDef :: { (AbsFlatwhite.BNFC'Position, [AbsFlatwhite.TopDef]) }
ListTopDef
  : TopDef { (fst $1, (:[]) (snd $1)) }
  | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Arg) }
Arg
  : Type Ident { (fst $1, AbsFlatwhite.Arg (fst $1) (snd $1) (snd $2)) }

ListArg :: { (AbsFlatwhite.BNFC'Position, [AbsFlatwhite.Arg]) }
ListArg
  : {- empty -} { (AbsFlatwhite.BNFC'NoPosition, []) }
  | Arg { (fst $1, (:[]) (snd $1)) }
  | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Block) }
Block
  : '{' ListStmt '}' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Block (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (AbsFlatwhite.BNFC'Position, [AbsFlatwhite.Stmt]) }
ListStmt
  : {- empty -} { (AbsFlatwhite.BNFC'NoPosition, []) }
  | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Stmt) }
Stmt
  : ';' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Empty (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | Block { (fst $1, AbsFlatwhite.BStmt (fst $1) (snd $1)) }
  | Type ListItem ';' { (fst $1, AbsFlatwhite.Decl (fst $1) (snd $1) (snd $2)) }
  | 'const' Type ListItem ';' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.ConstDecl (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3)) }
  | Ident '=' Expr ';' { (fst $1, AbsFlatwhite.Ass (fst $1) (snd $1) (snd $3)) }
  | 'return' Expr ';' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Ret (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | 'return' ';' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.VRet (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | 'if' '(' Expr ')' Stmt { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Cond (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'if' '(' Expr ')' Stmt 'else' Stmt { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.CondElse (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
  | 'while' '(' Expr ')' Stmt { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.While (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'for' '(' Ident '=' Expr 'to' Expr ')' Stmt { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.For (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7) (snd $9)) }
  | Expr ';' { (fst $1, AbsFlatwhite.SExp (fst $1) (snd $1)) }

Item :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Item) }
Item
  : Ident { (fst $1, AbsFlatwhite.NoInit (fst $1) (snd $1)) }
  | Ident '=' Expr { (fst $1, AbsFlatwhite.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (AbsFlatwhite.BNFC'Position, [AbsFlatwhite.Item]) }
ListItem
  : Item { (fst $1, (:[]) (snd $1)) }
  | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Type) }
Type
  : 'int' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Int (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | 'string' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Str (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | 'boolean' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Bool (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | 'void' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Void (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }

ListType :: { (AbsFlatwhite.BNFC'Position, [AbsFlatwhite.Type]) }
ListType
  : {- empty -} { (AbsFlatwhite.BNFC'NoPosition, []) }
  | Type { (fst $1, (:[]) (snd $1)) }
  | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr6 :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Expr) }
Expr6
  : Ident { (fst $1, AbsFlatwhite.EVar (fst $1) (snd $1)) }
  | Integer { (fst $1, AbsFlatwhite.ELitInt (fst $1) (snd $1)) }
  | 'true' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.ELitTrue (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | 'false' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.ELitFalse (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | Ident '(' ListExpr ')' { (fst $1, AbsFlatwhite.EApp (fst $1) (snd $1) (snd $3)) }
  | String { (fst $1, AbsFlatwhite.EString (fst $1) (snd $1)) }
  | '(' Expr ')' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr5 :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Expr) }
Expr5
  : '-' Expr6 { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Neg (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '!' Expr6 { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Not (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Expr) }
Expr4
  : Expr4 MulOp Expr5 { (fst $1, AbsFlatwhite.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Expr) }
Expr3
  : Expr3 AddOp Expr4 { (fst $1, AbsFlatwhite.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Expr) }
Expr2
  : Expr2 RelOp Expr3 { (fst $1, AbsFlatwhite.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Expr) }
Expr1
  : Expr2 '&&' Expr1 { (fst $1, AbsFlatwhite.EAnd (fst $1) (snd $1) (snd $3)) }
  | Expr2 { (fst $1, (snd $1)) }

Expr :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.Expr) }
Expr
  : Expr1 '||' Expr { (fst $1, AbsFlatwhite.EOr (fst $1) (snd $1) (snd $3)) }
  | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (AbsFlatwhite.BNFC'Position, [AbsFlatwhite.Expr]) }
ListExpr
  : {- empty -} { (AbsFlatwhite.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.AddOp) }
AddOp
  : '+' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Plus (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | '-' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Minus (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.MulOp) }
MulOp
  : '*' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Times (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | '/' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Div (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | '%' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.Mod (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (AbsFlatwhite.BNFC'Position, AbsFlatwhite.RelOp) }
RelOp
  : '<' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.LTH (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | '<=' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.LE (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | '>' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.GTH (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | '>=' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.GE (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | '==' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.EQU (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }
  | '!=' { (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1), AbsFlatwhite.NE (uncurry AbsFlatwhite.BNFC'Position (tokenLineCol $1))) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err AbsFlatwhite.Program
pProgram = fmap snd . pProgram_internal
}
